piecemeal fixes on maininfo window in bottom right corner - font size, and window sizing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -17,19 +17,17 @@ body {
 }
 
 #text {
-    top: 0;
-    min-width: 500px;
-    max-width: 500px;
+    position: relative;
+    max-width: 60%;
     font-family: sans-serif;
     /*overflow-y: scroll; Removed because I don't want the scrollbar showing*/
     z-index: 2;
-    color: white;
     /*dont know if i need this? -webkit-transition: all 1s;*/
     transition: all 0.3s;
 }
 
 #text.active {
-    margin-left: -500px;
+    margin-left: -60%;
 }
 
 /*dont know if i need these*/
@@ -47,8 +45,8 @@ body {
 
 /*fonts and text*/
 h1 {
-    font-size: 1.5rem;
-    line-height: 1.5rem;
+    font-size: 3rem;
+    line-height: 3rem;
 }
 
 .theloopfont {color: #d9ac7d;}
@@ -59,10 +57,9 @@ h1 {
 
 
 section {
-    margin: 400px 50px;
+    margin:100vh 50px;
     line-height: 25px;
     /*border-bottom: 1px solid #ddd; Removed because I didn't like the line between text sections*/
-    opacity: 0.25;
     font-size: 13px;
 }
 
@@ -78,25 +75,27 @@ section:last-child {
     position: fixed;
     bottom: 1vw;
     right: 1vw; 
-    /*border-color: red;
-    border-style:solid;
-    border-width: 5px;*/
     z-index: 2;
+    min-width: 150px;
 }
 
 #maininfo > div {
-    /*border-style: solid;
-    border-color: black;
-    border-width: 2px;*/
-    z-index: 2;
     overflow-x: hidden;
+    font-size: 10px;
+    min-height: 65px;
+    max-height: 65px;
+    border-right: solid 3px #A0A0A0;
+    border-left: solid 3px #A0A0A0;
+    border-bottom: solid 3px #A0A0A0;
+    background-color: rgba(255, 255, 255, .4);
+    text-align: center; 
+    /*font-weight:bold;*/
+    /*overflow-y: scroll;*/`
 }
 
-#text {
-    /*border-style: solid;
-    border-color: blue;
-    border-width: 4px;*/
-    z-index: 2;
+#mapPosition {
+    border-top: solid 3px #A0A0A0;;
+    word-wrap: break-word;
 }
 
 #instructions {
@@ -106,17 +105,10 @@ section:last-child {
     text-align: left;
     margin: 10;
     padding: 15px;*/
-    max-height: 15vh;
     width: auto;
-    background-color: rgba(255, 255, 255, .4);
-    border: solid 3px #A0A0A0;
-    font-family: 'Arial';
-    font: 15px;
-    overflow-y: scroll;
     /*scroll after max height is reached*/
-    font-weight: bold;
-    z-index: 2;
 }
+
 #geojsonbox {
     /*height: 30px;
     min-height: 80px;
@@ -124,40 +116,21 @@ section:last-child {
     padding: 15px;
     text-align: left;
         margin: 10;*/
-        max-height: 15vh;
         width: auto;
     background-color: rgba(255, 255, 255, .4);
-    border: solid 3px #A0A0A0;
-    font-family: 'Arial';
     font-size: 13px;
-    overflow: scroll;
     /*scroll after max height is reached*/
     word-wrap: break-word;
+}
+#text {
+    align-content: center;
+    width: 100%;
+    /*border-style: solid;
+    border-color: blue;
+    border-width: 4px;*/
     z-index: 2;
 }
 
-#mapWindowInfo {
-/*    height: 30px;
-    width: 200px;
-    position: absolute;
-    top: 260px;
-    margin: 10;
-    text-align: left;
-    padding: 15px;
-    right: 25px;*/
-    min-height: 65px;
-    max-height: 15vh;
-    width: auto;
-    background-color: rgba(255, 255, 255, .4);
-    border: solid 3px #A0A0A0;
-    font-family: 'Arial';
-    font-size: 10px;
-    /*overflow-y: hidden; /*scroll;*/ 
-    /*scroll after max height is reached*/
-    word-wrap: break-word;
-    z-index: 2;
-    font-weight:bold;
-}
 
 
 #scrolltest {
